# koi

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  koi-config.cmake.in  koi.c  koi.pc.in  koi_image.h  koi_image_write.h
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: 2-bug_report.md  config.yml
